--- a/scss/Upload.module.scss
+++ b/scss/Upload.module.scss
@@ -82,6 +82,7 @@
                 left: 35%;
                 transform: translate(-50%, -50%);
                 z-index: 11;
+                text-align: center;
 
                 & > button {
                     padding: 10px 18px;
@@ -94,10 +95,21 @@
                     color: #2ECC71;
                     transition: all 300ms;
                     cursor: pointer;
+                    margin-top: 10px;
 
                     &:hover {
                         transform: scale(1.1);
                     }
+                }
+
+                & > [class~='text1'] {
+                    color: #FFF;
+                    font-size: 42px;
+                }
+
+                & > [class~='text2'] {
+                    color: #FFF;
+                    font-size: 14px;
                 }
             }
 
@@ -111,6 +123,18 @@
                 transform: translate(-50%, -50%) scale(1.6);
                 position: absolute;
                 box-shadow: 0 0 100px rgb(0 0 0 / 15%);
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                & > div {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    transform: scale(12);
+                }
             }
         }
     }
